--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "install": "^0.13.0",
-    "npm": "^6.12.0",
+    "npm": "^6.13.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.4"
   },
   "scripts": {
