--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "install": "^0.13.0",
     "npm": "^6.13.1",
     "react": "^16.10.2",
+    "react-beautiful-dnd": "^12.1.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
