--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "react-textarea-autosize": "^7.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
